# kyouth-data-ai

./: .gitignore  README.md
week1/: .gitignore  README.md  main.py  pyproject.toml
week1/queries/: avg_description_length.sql  create_jobs_table.sql  delete_low_quality.sql  get_content_hash.sql  insert_job.sql  longest_description.sql  move_to_quarantine.sql  select_all_jobs.sql  shortest_description.sql  update_quality.sql
week1/src/: db_utils.py  ingestor.py  loader.py  processor.py  profiler.py
week_1/: README.md  main.py  pyproject.toml
week_1/queries/: create_quarantine_table.sql  missing_values.sql  update_job.sql
week_1/src/: ingestor.py  loader.py  processor.py  profiler.py
week_2/: .gitignore  README.md  db_server.py  find_skill_gaps.py  prompt_model.py  pyproject.toml  rate_limits.txt  tag_data.py
week_3/: .gitignore  README.md  docker-compose.yml
week_3/backend/: Dockerfile  pyproject.toml
week_3/backend/src/: app.py
week_3/backend/src/week_2/: find_skill_gaps.py  tag_data.py
week_3/frontend/: Dockerfile  pyproject.toml
week_3/frontend/src/: app.py
week_3/frontend/src/templates/: chat_page.html  dashboard.html
week_3/landing/: Dockerfile  pyproject.toml
week_3/landing/src/: app.py
week_3/landing/src/templates/: index.html
