[project]
name = "frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.124.4",
    "jinja2>=3.1.6",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.33.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]
